@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-14T16:06:43Z",
-  "count_outdated" : 1553,
-  "uniques_outdated" : 421,
-  "count" : 1588,
-  "uniques" : 440,
+  "timestamp" : "2022-06-15T00:32:57Z",
+  "count_outdated" : 1558,
+  "uniques_outdated" : 424,
+  "count" : 1594,
+  "uniques" : 442,
   "clones" : [
-    {
-      "timestamp": "2022-05-31T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 5 ],
-      "uniques": 3,
-      "uniques_minmax": [ 1, 3 ]
-    },
     {
       "timestamp": "2022-06-01T00:00:00Z",
       "count": 2,
@@ -105,10 +98,10 @@
     },
     {
       "timestamp": "2022-06-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 5,
+      "count_minmax": [ 1, 5 ],
+      "uniques": 3,
+      "uniques_minmax": [ 1, 3 ]
     }
   ]
 }
