@@ -1,3 +1,10 @@
+2022-06-15T00:32:57Z:
+* notice: last 14d: unq all: 5 36
+* notice: prev accum: outdated-unq outdated-all / unq all: 421 1553 / 440 1588
+* notice: next accum: outdated-unq outdated-all / unq all: 424 1558 / 442 1594
+* notice: prev exec diff / last date diff / accum: unq all: +2 +4 -0 -0 / +3 +5 -0 -0 / 3 5
+* notice: removed / changed dates: [2022-05-31] / [2022-06-14]
+
 2022-06-14T16:06:43Z:
 * notice: last 14d: unq all: 5 35
 * notice: prev accum: outdated-unq outdated-all / unq all: 421 1553 / 440 1589
